--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body 
+/* body 
 {
     background-color: #707070;
 }
@@ -137,4 +137,4 @@ select{
     margin-bottom: 1%;
     font-family: 'Ubuntu', sans-serif;
     color: #95060a;
-}
+} */
