--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,12 @@
     box-sizing: border-box;
 }
 
+
 body {
     background-color: #141301;
     font-family: 'Open Sans', sans-serif;
     color: white;
-
+    
 }
 
 .container {
@@ -110,8 +111,50 @@ body {
     padding-bottom: 1.5rem;
 }
 
-.logo{
+.logo {
     padding-bottom: 1.5rem;
+}
+
+.login-logo {
+    width: 75px;
+    height: 75px;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.search {
+    display: flex;
+    border-radius: 8px;
+    margin-right: 1rem;
+    border: none;
+    width: 100%;
+    padding: .3rem;
+    font-size: 1rem;
+    caret-color:#141301;
+}
+
+.search:focus {
+    outline-style: none;
+    box-shadow: 0 0 7px 1px #F2D443;
+}
+
+.material-icons.md-light { 
+    color: rgba(255, 255, 255, 1); 
+    font-size: 36px;
+
+}
+
+.material-icons.md-light.md-inactive { 
+    color: rgba(255, 255, 255, 0.3); 
+}
+
+button {
+    background: none;
+    border: none;
 }
 
 a {
