--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,22 @@ body {
     box-shadow: 0 0 7px 1px #F2D443;
 }
 
+.input-modal {
+    display: block;
+    margin-bottom: 1.25rem;
+    border-radius: 8px;
+    border: none;
+    width: 100%;
+    padding: .75rem;
+    font-size: 1rem;
+    caret-color:#141301;
+}
+
+.input-modal:focus {
+    outline-style: none;
+    box-shadow: 0 0 7px 1px #F2D443;
+}
+
 .submit {
     background-color: yellowgreen;
     border-radius: 4px;
@@ -59,6 +75,26 @@ body {
 }
 
 .submit:active {
+    color: yellowgreen;
+}
+
+.modal-add {
+    width: 100%;
+    margin-top: 1.25rem;
+    background-color: yellowgreen;
+    border-radius: 4px;
+    border: none;
+    padding: .375rem;
+    font-family: 'Viga', sans-serif;
+    font-size: 1.375rem;
+    color: 141301;
+}
+
+.modal-add:hover {
+    color: white;
+}
+
+.modal-add:active {
     color: yellowgreen;
 }
 
@@ -84,6 +120,11 @@ body {
     margin-bottom: .375rem;
     font-weight: 300; 
     font-style: italic;
+}
+
+.modal-label {
+    margin-bottom: .375rem;
+    font-weight: 300; 
 }
 
 .message {
@@ -318,7 +359,8 @@ button {
     border: 1px solid yellowgreen;
     border-radius: 8px;
     padding: 2rem;
-    width: 75%;
+    width: 100%;
+    max-width: 500px;
 }
 
 #addContactButton {
@@ -326,8 +368,13 @@ button {
     margin-top: .5rem;
 }
 
-.close-icon {
-    float: right;  
+.modal-close {
+     display: flex;
+     justify-content: end;
+}
+
+.card-button {
+    position: relative;  
 }
 
 a {
