--- a/css/styles.css
+++ b/css/styles.css
@@ -245,14 +245,16 @@ body {
 }
 
 .material-icons-outlined { 
-    color: rgb(32,32,22);
+    color: #DA7422;
     font-size: 24px;
+    opacity: .5;
     transition: all 0.15s;
     cursor: pointer;
 }
 
 .material-icons-outlined:hover {
     color: #DA7422;
+    opacity: 1;
     cursor: pointer;
 }
 
